--- a/package.json
+++ b/package.json
@@ -4,10 +4,9 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
-    "watch": "ng build --watch --configuration development",
-    "test": "ng test",
-    "serve:ssr:nuptse": "node dist/nuptse/server/server.mjs"
+    "build:ssr": "ng build --configuration development",
+    "watch:ssr": "ng build --watch --configuration development",
+    "serve": "node dist/nuptse/server/server.mjs"
   },
   "prettier": {
     "printWidth": 100,
