--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,11 @@
     "experimentalDecorators": true,
     "importHelpers": true,
     "target": "ES2022",
-    "module": "preserve"
+    "module": "preserve",
+    "paths": {
+      "@pages/*": ["./src/app/*"],
+      "@shared/*": ["./src/app/shared/*"],
+    },    
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
