change from canvas to svg

--- a/angular.json
+++ b/angular.json
@@ -54,7 +54,15 @@
               "optimization": false,
               "extractLicenses": false,
               "sourceMap": true
-            }
+            },
+
+
+            "development": {
+              "outputPath": "dist/development",                 
+              "optimization": false,
+              "extractLicenses": false,
+              "sourceMap": true
+            }            
           },
           "defaultConfiguration": "production"
         },
