--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -10,7 +10,7 @@
   },
   "include": [
     "src/**/*.ts"
-, "src/shared/methods.lib.ts_old"  ],
+, "src/shared/methods.lib.ts"  ],
   "exclude": [
     "src/**/*.spec.ts"
   ]
